--- a/eduPlatformApp/templates/base.html
+++ b/eduPlatformApp/templates/base.html
@@ -71,7 +71,7 @@
                         <img src="{% static './img/footer-logo.svg' %}" class="footer-logo" alt="footer-logo">
                     </div>
                     <div class="footer-description">
-                        <p class="text-white">&copy;DidEduComp 2022-2023. Әзірлеуші: <a href="#" class="author">Аджан С.З.</a></p>
+                        <p class="text-white">&copy;DigEduComp 2022-2023. Әзірлеуші: <a href="#" class="author">Аджан С.З.</a></p>
                     </div>
                 </div>
                 <div class="col-md-3">
