--- a/eduPlatformApp/templates/pages/lesson-detail.html
+++ b/eduPlatformApp/templates/pages/lesson-detail.html
@@ -21,12 +21,13 @@
                     <div class="video">
                         <iframe width="100%" height="450" src="{{ theme.videoUrl }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <div class="description">
+                    <div style="width: 100%;" class="description">
                         <h2>Тақырыптың сипаттамасы:</h2>
-                        <p>
-                            {{ theme.themeDescription }}
-                            
-                        </p>
+                        <div>
+                            {% autoescape off %}
+                            {{ theme.themeDescription|safe }}
+                            {% endautoescape %}
+                        </div>
                     </div>
                     <div class="comments">
                         <h3 class="text-blue">Пікір қалдыру</h3>
